Improve line-spacing, decrease font size on small screens, fix issue #15

--- a/_sass/moving.scss
+++ b/_sass/moving.scss
@@ -2,11 +2,13 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Bitter", "Times New Roman", "FangSong", "仿宋", STFangSong, "华文仿宋", serif;
+$base-font-family: "Bitter", "Times New Roman", "FangSong", "仿宋", STFangSong,
+  "华文仿宋", serif;
 $base-font-size: 18px !default;
 $base-font-weight: 400 !default;
-$small-font-size: $base-font-size * 0.9 !default;
-$base-line-height: 1.5 !default;
+$small-font-size: $base-font-size * 0.85 !default;
+$base-line-height: 1.8 !default;
+$small-line-height: 1.6 !default;
 
 $spacing-unit: 30px !default;
 
