--- a/_sass/moving/_layout.scss
+++ b/_sass/moving/_layout.scss
@@ -173,13 +173,14 @@
   margin-left: 0;
   list-style: none;
 
-  > li {
-    margin-bottom: $spacing-unit / 3;
+  li {
+    margin-bottom: $spacing-unit / 6;
   }
 }
 
 .post-year {
-  margin-top: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 0.25rem;
   font-weight: 700;
   color: lighten($text-color, 15%);
 
@@ -192,6 +193,7 @@
 
 .post-meta {
   display: inline-block;
+  min-width: 60px;
 
   @media (max-width: 500px) {
     @include relative-font-size(0.8);
@@ -203,7 +205,7 @@
 
 .post-link-layout {
   margin-left: 10%;
-  display: inline-block;
+  display: inline;
 
   @media (max-width: 500px) {
     @include relative-font-size(1);
@@ -237,8 +239,7 @@
 .post-title,
 .post-content h1 {
   @include relative-font-size(2.2);
-  letter-spacing: -1px;
-  line-height: 1;
+  line-height: 1.3;
   font-weight: 1000;
   margin-top: -0.5rem;
 
@@ -283,7 +284,7 @@
 .social-media-list {
   margin-top: -0.6rem;
   display: flex;
-  @include relative-font-size(1.0);
+  @include relative-font-size(1);
   li {
     float: left;
     a {
